# primal-server

./: .gitignore  .gitmodules  LICENSE  Manifest.toml  Project.toml  README.md  code_load.jl  collect-relays-from-contact-lists.jl  default-relays.json  default-settings.json  env-vars.jl  fetch-web-page-meta-data.jl  firehose_server_default_message_processors.jl  flake.nix  import-historical-DMs.jl  import-historical-metadata-media.jl  import-zap-receipts.jl  internal_services.jl  internal_services_2.jl  link-preview.py  load.jl  load_common.jl  module-globals.jl  nostr.json  pgfuncs1.sql  pkg.jl  precompile-deps.jl  precompile.jl  relays-minimal.txt  relays.txt  s3.py  shell.nix  start.jl  trustrank-nb.jl  user_search.jl  user_search_nb.jl  utils.vim  ws_conn_unblocker.jl
ext/: App.jl  CacheServerHandlers.jl  DB.jl  MetricsLogger.jl  Utils.jl
pg_primal/: Cargo.toml  pg_primal.control
pg_primal/src/: lib.rs
pgext/: .gitignore  make.sh  pg_ext_init.jl  pg_ext_init.sql.template  primal-ext.c  psqlrc  table-sizes.sql
primal-cache/: .gitignore  Cargo.toml  run-util.sh  schema.sql  shell.nix
primal-cache/src/: import.rs  lib.rs  main.rs  nostr.rs  proof_test.rs  recent_items.rs  utils.rs
primal-media/: Cargo.toml  fix-processing-node-diffs.md
primal-media/primal-media-macros/: Cargo.toml
primal-media/primal-media-macros/src/: lib.rs
primal-media/src/: cache_storage_media.rs  config.rs  hls_providers.rs  lib.rs  main.rs  media.rs  media_analysis.rs  nostr.rs  pn_wrappers.rs  processing_graph.rs  processing_graph_execution_scheduler.rs
sql/: app.sql  auto_explain-light.sql  auto_explain.sql  pg_activity.sql  pg_buffercache_report.sql  postgresql.conf  psqlrc  table_sizes.sql  utils.sql  vacuum_progress.sql  wraparound_autovacuum_report.sql
sql/schemas/: cache-full.sql  cache.sql  media-full.sql  membership.sql
src/: PrimalServer.jl  app.jl  app_ext.jl  app_media.jl  bech32.jl  blossom.jl  cache_server_handlers.jl  cache_server_handlers_ext.jl  cache_server_sync.jl  cache_storage.jl  cache_storage_ext.jl  cache_storage_media.jl  cache_storage_pg_listener.jl  dag.jl  dag_base.jl  dag_runner.jl  db.jl  deps.jl  dvm_feed_checker.jl  dvm_service_provider.jl  event_rebroadcasting.jl  event_sync.jl  fetching.jl  filterlist.jl  firehose_client.jl  firehose_server.jl  media.jl  media_ai.jl  media_s3.jl  metrics_logger.jl  nostr.jl  nostr_client.jl  notifications.jl  perf_stats.jl  postgres.jl  postgres_macros.jl  processing_graph.jl  processing_graph_execution_scheduler.jl  prometheus_exporter.jl  psql.jl  (+13 more)
ws-connector/: .gitignore  Cargo.toml  build.sh  flake.nix  pgwire.patch  shell.nix
ws-connector/.cargo/: config.toml
ws-connector/src/: lib.rs  main.rs
ws-connector/src/connector/: connection.rs  handler_manager.rs  importer_manager.rs  mod.rs  pgwire_handler.rs  process_manager.rs  router.rs
ws-connector/src/handlers/: handlers.rs
ws-connector/src/shared/: locking_watchdog.rs  mod.rs  protocol.rs  task_dump.rs  types.rs  utils.rs
ws-connector/tests/: integration_tests.rs
