[package]
name = "ws-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.23.1"
log = "0.4.17"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["full"] }
env_logger = "0.10.0"
serde_json = "1.0.128"
deadpool-postgres = "0.14.0"
tokio-postgres = { version = "0.7.11", features = ["with-serde_json-1"] }
hex = "0.4.3"
measure_time = "0.8.3"
libc = "0.2.158"
flate2 = "1.0.34"
rand = "0.8.5"
futures = "0.3.30"
clap = { version = "4.5.18", features = ["derive"] }
async-trait = "0.1.83"
sqlparser = "0.51.0"
function_name = "0.3.0"
# tungstenite = "0.24.0"
#pgwire = "0.25.0"
pgwire = { path = "./pgwire" }

primal_cache = { path = "../primal-cache" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "uuid"] }
anyhow = "1.0.98"
chrono = "0.4.41"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
nostr-sdk = { version = "0.43.0", features = ["all-nips"] }
rustls = { version = "0.23.31", features = ["ring"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

[[bin]]
name = "ws-connector"
path = "src/bin/ws-connector.rs"

[[bin]]
name = "ws-handlers"
path = "src/bin/ws-handlers.rs"

[[bin]]
name = "ws-importer"
path = "src/bin/ws-importer.rs"

[[bin]]
name = "ws-replay"
path = "src/bin/ws-replay.rs"

[profile.release]
debug = 2 # full
